# catalyst-os

./: Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
kernel/: Cargo.toml  Makefile
kernel/.cargo/: config.toml
kernel/src/: main.rs  panic.rs
kernel/src/interrupts/: breakpoint.rs  double_fault.rs  gdt.rs  mod.rs
kernel/src/interrupts/hardware/: keyboard.rs  pics_ports.md  timer.rs
kernel/src/tests/: mod.rs  vga.rs
kernel/src/utils/: mod.rs  panic.rs
kernel/src/vga/: buffer.rs  mod.rs
paging/: Cargo.toml
paging/src/: lib.rs  page_fault.rs
paging/src/mem/: allocators.rs  manager.rs  mod.rs  translate.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/qemu/: mod.rs
shared/src/serial/: macros.rs  mod.rs
shared/src/tests/: mod.rs
shared/src/utils/: mod.rs
src/: main.rs
src/interrupts/: gdt.rs  mod.rs
src/interrupts/hardware/: keyboard.rs  mod.rs  timer.rs
src/qemu/: mod.rs
src/serial/: macros.rs  mod.rs
src/tests/: mod.rs
src/utils/: mod.rs  panic.rs
src/vga/: buffer.rs  color.rs  macros.rs  mod.rs
vga/: Cargo.toml
vga/src/: buffer.rs  color.rs  lib.rs  macros.rs
