[package]
name = "catalyst"
version = "0.1.0"
authors = ["Shardul Nalegave <nalegaveshardul40@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]