[package]
name = "catalyst"
version = "0.1.0"
authors = ["Shardul Nalegave <nalegaveshardul40@gmail.com>"]
edition = "2018"

[dependencies]
vga = { path = "../vga" }
paging = { path = "../paging" }
shared = { path = "../shared" }
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }
spin = "0.5.2"
x86_64 = "0.12.1"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-success-exit-code = 33
test-timeout = 300
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]